<resources>
    <string name="app_name">CircleTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="action_settings">Settings</string>
    <string name="skip">跳过</string>
    <string name="next_page">下一页</string>
    <string name="start">开始体验</string>
    <string name="next">下一页</string>
    <string name="create_new_account">创建新的账号</string>
    <string name="forget_password">忘记了密码？</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="mobile_hint">手机号（+86）</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="login_account_hint">手机号码/学号</string>
</resources>
