<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/x580"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x100">

        <EditText
            android:id="@+id/mAccountValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x80"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login_account_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/x580"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x25">

        <EditText
            android:id="@+id/mPasswordValue"
            android:layout_width="@dimen/x580"
            android:layout_height="@dimen/x80"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/mLoginAction"
        android:theme="@style/MyButtonStyle"
        android:layout_width="@dimen/x580"
        android:layout_height="@dimen/x100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x30"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="@dimen/x580"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x5">

        <Button
            android:id="@+id/mNewAccountAction"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/mForgetPwdAction"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </RelativeLayout>


</LinearLayout>